refactor(go-api): add subscriber layer
